although making the body width 100% prevented scrolling issues on a laptop, did not work on mobile. Trying to make the html width 100% to see if that corrects the issue.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 html {
 	background-color: #e2e2e2;
 	overflow-x: hidden;
+	width: 100%;
 }
 
 body {
